--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.0",
     "typescript": "^4.9.5",
@@ -40,7 +42,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.8.6",
-    "@types/react": "^18.2.28",
+    "@types/react": "^18.2.29",
     "@types/react-dom": "^18.2.13",
     "@types/styled-components": "^5.1.28"
   }
